# ngenate-flex-storage-rs

./: Cargo.toml  README.md  rustfmt.toml
examples/: cast_journey.rs
src/: casting.rs  lib.rs  storage_traits.rs
src/storage_handle/: guards.rs  handle.rs  mod.rs  view_storage_controller.rs
src/storage_types/: hashmap_storage.rs  mod.rs  sparse_storage.rs  val_storage.rs  vec_storage.rs
src/storage_types/view/: mod.rs  view_storage.rs
tests/: tests.rs
tests/experiments/: casting_limitations.rs  interior_guardcell_1_pass.rs  interior_guardcell_2_fail.rs  interior_guardcell_3_pass.rs  main.rs
